# OpenGL-Starter

./: .gitignore.json  CMakeLists.txt  Doc.txt  vcpkg.json
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app_core.vcxproj  app_core.vcxproj.filters  cmake_install.cmake  core.vcxproj  core.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  glfw_no_api.sln  glfw_no_api.vcxproj  glfw_no_api.vcxproj.filters
build-msvc/Debug/: app_core.lib  glad.lib
build-msvc/Debug/shaders/: sprite.vert  sprite_batch.frag  triangle.frag  triangle.vert
build-msvc/app_core.dir/Debug/app_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  app_core.lastbuildstate
build-msvc/core.dir/Debug/: core.lib.recipe
build-msvc/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-msvc/glfw_no_api.dir/Debug/: glfw_no_api.exe.recipe  glfw_no_api.ilk
build-msvc/glfw_no_api.dir/Debug/glfw_no_api.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
build-msvc/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
core/include/core/: aabb.hpp  frustum.hpp  ray.hpp  raycast.hpp
core/include/core/camera/: OrbitCamera3D.hpp  ScreenRay.hpp
include/app/: App.hpp
include/engine/: IScene.hpp
include/game/: Game.hpp
include/gfx/: GLDebug.hpp  OrthoCamera2D.hpp  Shader.hpp  SpriteBatch.hpp  Texture2D.hpp  TriangleRenderer.hpp
include/render/: BoxWire3D.hpp  DebugCross3D.hpp  DebugLines3D.hpp  Mesh3D.hpp
include/scenes/: MenuScene.hpp  PongScene.hpp
include/ui/: BitmapFont.hpp
shaders/: basic3d.frag  basic3d.vert  sprite.frag  sprite_batch.frag  sprite_batch.vert  triangle.vert
src/: main.cpp
src/app/: App.cpp
src/game/: Game.cpp  PongScene.cpp
src/gfx/: GLDebug.cpp  Shader.cpp  SpriteBatch.cpp  Texture2D.cpp  TriangleRenderer.cpp
src/render/: BoxWire3D.cpp  DebugCross3D.cpp  DebugLines3D.cpp  Mesh3D.cpp
tests/: test_aabb.cpp  test_orbit_cam.cpp
